# docs/swagger.yaml
@@ -1,10 +1,24 @@
 definitions:
   dto.DemoDto:
     properties:
+      age:
+        type: integer
+      email:
+        type: string
       id:
         type: integer
       name:
         type: string
+      password:
+        minLength: 6
+        type: string
+      re_password:
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - re_password
     type: object
   models.Demo:
     properties:
@@ -108,6 +122,22 @@ paths:
       summary: Ping接口
       tags:
       - Demo
+  /api/v1/init:
+    get:
+      description: init接口
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/resp.Resp'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: init接口
+      tags:
+      - Default
   /api/v1/ping:
     get:
       description: Ping接口
